# aseprite-packer

./: Cargo.toml  README.md
examples/: pack_aseprite.rs
examples/output/: output.ron
src/: lib.rs  main.rs  output.ron  packer.rs
tiny2D/: Cargo.toml
tiny2D/src/: packer.rs
