[package]
name = "aseprite-packer"
version = "0.1.2"
edition = "2018"
license = "MIT"
description = "Aseprite sprite packer"
homepage = "https://github.com/louisgjohnson/aseprite-packer"
repository = "https://github.com/louisgjohnson/aseprite-packer"
readme = "README.md"
keywords = ["gamedev", "2d", "aseprite", "packer", "spritesheet"]
categories = ["game-development", "rendering::data-formats"]

[dependencies]
asefile = "0.2.0"
image = "0.23.14"
texture_packer = "0.23.0"
serde = "1.0.126"
ron = "0.6.4"